--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 GameInstanceClass=/Game/ProjEng/Core/Engine/GI_Main.GI_Main_C
@@ -39,4 +37,12 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Static
+bForceRebuildOnLoad=True
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+bShouldDiscardSubLevelNavData=False
 
