--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,4 +45,5 @@ bForceRebuildOnLoad=True
 [/Script/NavigationSystem.NavigationSystemV1]
 bGenerateNavigationOnlyAroundNavigationInvokers=False
 bShouldDiscardSubLevelNavData=False
+bSpawnNavDataInNavBoundsLevel=True
 
