--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,9 +8,9 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="D:/ProjectEnglandBuild")
 FullRebuild=False
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
@@ -52,7 +52,7 @@ InternationalizationPreset=English
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=True
-bSkipEditorContent=False
+bSkipEditorContent=True
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
@@ -93,7 +93,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/General")
 +MapsToCook=(FilePath="/Game/Maps/Pub")
 +MapsToCook=(FilePath="/Game/Maps/Street")
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
++MapsToCook=(FilePath="/Game/Maps/Shop")
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
